<resources>
    <string name="app_name">mobilalk</string>
    <string name="emailAddress">Email cím</string>
    <string name="password">Jelszó (min. 6 karakter)</string>
    <string name="login">Bejelentkezés</string>
    <string name="loginWithGoogle">Bejelentkezés Google fiókkal</string>
    <string name="loginAnonymous">Bejelentkezés Vendégként</string>
    <string name="register">Regisztráció</string>
    <string name="noAccount">Nincsen még fiókod?</string>
    <string name="username">Felhasználónév</string>
    <string name="passwordAgain">Jelszó mégegyszer (min. 6 karakter)</string>
    <string name="musician">Zenész</string>
    <string name="listener">Hallgató</string>
    <string name="alreadyHaveAccount"><u>Van már fiókod?</u></string>
    <string name="anonymousUser">Vendég felhasználó!</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="pressBackAgain">A kilépéshez mégegyszer nyomd meg a vissza gombot!</string>
    <string name="song_title">Zene Címe</string>
    <string name="song_artist">Zene Előadója</string>
    <string name="song_duration">99:59</string>
    <string name="musicUpload">Zene feltöltése</string>
    <string name="logout">Kilépés</string>
    <string name="chooseSong">Válassz ki egy zenét!</string>
    <string name="chooseText">Tallózás…</string>
    <string name="upload">Feltöltés</string>
    <string name="musicArtist">Zene előadója</string>
    <string name="artistSameAsUploader">Előadó vagyok</string>
    <string name="albumTitle">Album címe</string>
    <string name="genre">Zene műfaja</string>
    <string name="musicTitle">Zene címe</string>
    <string name="startOfSong">00:00</string>
    <string name="uploadedBy">"Feltöltötte: %1$s"</string>
    <string name="chooseAlbumArtText">Albumkép cseréje…</string>
    <string name="modify">Frissítés</string>
    <string name="idString">ID: %1$s</string>
    <string name="search">Keresés</string>
    <string name="edit_song">Szerkesztés</string>
    <string name="save_changes">Mentés</string>
    <string name="delete_song">Töröl</string>
</resources>