<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">


    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/song_title"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/artistInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/song_artist"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/genreInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/genre"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/albumInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/albumTitle"
        android:inputType="text"
        android:minHeight="48dp" />

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_album_64" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/seekBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/playPauseButton"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:onClick="playPauseSelectedSong"
            android:padding="16dp"
            app:icon="@android:drawable/ic_media_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.402"
            app:layout_constraintStart_toStartOf="@+id/seekBar"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/totalSongLength"
            app:layout_constraintStart_toEndOf="@+id/currentSongPosition"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentSongPosition"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/startOfSong"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalSongLength"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/startOfSong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/selectMp3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseSong"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/chooseAlbumArtText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/upload" />
</LinearLayout>